# finsight-alpha

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  .lovable-index.tsx  .vercelignore  Dockerfile  README.md  conftest.py  main.py  pyproject.toml  requirements-rag.txt  requirements.txt  scratch_update.py
.streamlit/: config.toml
app/: streamlit_app.py
backend/: __init__.py  main.py
data/: cache.db  finsight_users.db
docs/: DEPLOY.md  DESIGN_SYSTEM.md  LOVABLE_PROMPT.md  PROD_RUNBOOK.md  PROJECT_OVERVIEW.md  ROADMAP.md  UX_AUDIT.md  forecasting_hsmm_tft.md  ml_signal_research_lab.md  phase_1_completion_report.md  phase_1d_cloud_architecture.md  phase_2_financial_math_engine.md  phase_3_black_scholes_and_greeks.md  phase_4_monte_carlo_var_cvar.md  phase_5_portfolio_optimization.md  phase_6_ml_forecasting.md  phase_7_market_regime_detection.md  phase_8_rag_financial_document_intelligence.md  rag_setup.md  reliance_signal_research_lab.md
frontend/: login.html  risk.html  terminal.html
frontend-v2/: README.md  package-lock.json  package.json  vercel.json
infra/: Dockerfile.api  Dockerfile.streamlit  cloudrun_notes.md  gcp_architecture.md  gcp_commands.sh  gcp_commands_windows.ps1  gcp_deployment.md  production_readiness.md
notebooks/: 01_market_data_eda.ipynb
scripts/: activate_production_owner.py  apply_production_migrations.py  ask_rag.py  build_graph.py  build_rag_index.py  check_free_api_connections.py  do_replace.py  fetch_filings.py  ingest_intelligence.py  temp_rag_ui.py  verify_production_phase0.py
sql/: 001_create_tables.sql  (+4 more)
(+288 files in other folders)
