[project]
name = "finsight-alpha"
version = "0.1.0"
description = "FinSight Alpha — financial research terminal (FastAPI backend + quant engine)"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic",
    "pandas",
    "numpy",
    "yfinance",
    "scipy",
    "scikit-learn",
    "joblib",
    "hmmlearn",
    "pypdf",
    "python-docx",
    "rank-bm25",
    "tqdm",
    "requests",
    "beautifulsoup4",
    "lxml",
    "urllib3",
    "tldextract",
    "openai",
    "python-dotenv",
    "sqlalchemy",
    "psycopg2-binary",
    "uvicorn",
]

[tool.vercel]
entrypoint = "backend.main:app"
